add userManagermentController
